# mcp-clickzetta-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE copy  Makefile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: python-publish.yml
knowledge/: attribution_analysis.json
src/mcp_clickzetta_server/: __init__.py  aws_model_test.py  knowledges.py  mcp-clickzetta-server.code-workspace  prompts.py  samples.py  server.py  util.py  write_detector.py
src/mcp_server_snowflake/: server.py
src/mcp_snowflake_server/: __init__.py  server.py
test/: test_prompt.py
