[project]
name = "mcp_snowflake_server"
version = "0.3.0"
description = "A simple Snowflake MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "snowflake-snowpark-python",
    "pandas",
    "snowflake-connector-python[pandas]",
    "python-dotenv",
    "sqlparse"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
mcp_snowflake_server = "mcp_snowflake_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_snowflake_server"]
