[project]
name = "mcp_clickzetta_server"
version = "0.4.0"
description = "A simple ClickZetta MCP server"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mcp>=1.0.0",
    "clickzetta-connector-python>=0.8.89",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "sqlparse>=0.5.3",
    "clickzetta-zettapark-python>=0.1.3",
    "fastparquet",
    "openpyxl",
    "xinference"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
mcp_clickzetta_server = "mcp_clickzetta_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_clickzetta_server"]
