[project]
name = "mcp_clickzetta_server"
version = "0.4.0"
description = "ClickZetta MCP server"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastparquet",
    "openpyxl",
    "xinference",
    "sqlalchemy",
    "pymysql",
    "psycopg2-binary",
    "typer==0.15.2",
    "mcp>=1.0.0",
    "clickzetta-connector-python>=0.8.89",
    "clickzetta-zettapark-python>=0.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "sqlparse>=0.5.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "mcp-clickzetta-server"
packages = [{include = "mcp_clickzetta_server"}]

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
mcp_clickzetta_server = "mcp_clickzetta_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_clickzetta_server"]
